@@ -4,8 +4,9 @@ jalv (1.4.5) unstable;
   * Generate Qt moc nonsense at build time for broader compatibility
   * Update for latest LV2 Atom Object simplifications
   * Set port pretty names via new Jack metadata API
+  * Add support for data-access extension (based on patch by Filipe Coelho)
 
- -- David Robillard <d@drobilla.net>  Sun, 06 Apr 2014 02:03:55 -0400
+ -- David Robillard <d@drobilla.net>  Sat, 26 Apr 2014 13:50:14 -0400
 
 jalv (1.4.4) stable;
 
